# pypmc-cli

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  install.bat  install.cmd  install.ps1  install.sh
.github/workflows/: release.yml  test.yml
pypmc-docs/: README.md  index.html  package-lock.json  package.json  vite.config.ts
pypmc-docs/src/: App.tsx  index.css
pypmc-docs/src/components/docs/: CodeBlock.tsx  Sidebar.tsx  nav-data.ts
pypmc-docs/src/components/docs/sections/: Advanced.tsx  Commands.tsx  Configuration.tsx  Installation.tsx  Introduction.tsx  QuickStart.tsx
pypmc-docs/src/components/ui/: badge.tsx  button.tsx  tabs.tsx
pypmc-docs/src/data/: index.ts
pypmc-docs/src/docs/: CodeBlock.tsx  Sidebar.tsx
pypmc-docs/src/docs/sections/: Advanced.tsx  Commands.tsx  Configuration.tsx  Contributing.tsx  Installation.tsx  QuickStart.tsx
pypmc-docs/src/types/: index.ts
pypmc-example-project/: main.py  package-lock.yml  package.yml
src/: config.c  config.h  core.c  core.h  main.c  venv.c  venv.h
